# housing

./: .gitignore  .npmrc  CLAUDE.md  DESKTOP_BUILD.md  README.md  SECURITY.md  launcher.py  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py
build-scripts/: build.bat  build.sh
electron/: main.js  preload.js
